add angular, copy, and remove dev directory

--- a/dev/index.html
+++ b/dev/index.html
@@ -5,6 +5,7 @@
     <title>Maintenance Inventory Management</title>
     <link rel="stylesheet" href="app.css">
     <script src="app.js"></script>
+    <script src="angular.js"></script>
 </head>
 <body>
     Hello World.
